--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
 	margin-right: 20px;
 }
 header {
-	background-color: #2e2a2a;
+	background-color: #271f1f;
 	color: white;
 	padding: 20px;
 	text-align: center;
