--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ footer {
 
 .navigation a {
 	text-decoration: none;
-	color: #b17f7f;
+	color: #eae0e0;
 	font-size: 16px;
 	transition: color 0.2s;
 }
